--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <div class="quarter-circle-container">
+      <div class="quarter-circle"></div>
+    </div>
   </body>
 </html>
