--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
+  <div class="outer-root">
+    <div class="oval"></div>
     <div id="root" class="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <div class="quarter-circle-container">
-      <div class="quarter-circle"></div>
-    </div>
+  </div>
   </body>
 </html>
